# SpectralRift.PlatformWindows

./: CMakeLists.txt  LICENSE  README.md
private/engine/platform/win32/: win32_gl_context.cpp  win32_platform.cpp  win32_window.cpp
public/engine/platform/win32/: win32_gl_context.hpp  win32_platform.hpp  win32_window.hpp
